Project R
Added ProjectR files as of current date and some IgniV and ydl_queue files I made some minor modifications to a while back..